# AgentsFramework

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  PLAN_v2.md  README.md  TrustFrameworkAnd Governance.md  __init__.py  cli.py  langgraph.json  logging.json  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: explainability-wire-baseline.yml  frontend-wire-baseline.yml  wire-codegen.yml
StructuredReasoning/: __init__.py  cli_pyramid.py
StructuredReasoning/components/: __init__.py  pyramid_parser.py
StructuredReasoning/orchestration/: __init__.py  pyramid_loop.py  pyramid_state.py
StructuredReasoning/services/: __init__.py  pyramid_persistence.py
StructuredReasoning/trust/: __init__.py  pyramid_schema.py
agent_ui_adapter/: __init__.py  server.py
agent_ui_adapter/adapters/: __init__.py
agent_ui_adapter/ports/: __init__.py  agent_runtime.py
agent_ui_adapter/translators/: __init__.py  ag_ui_to_domain.py  domain_to_ag_ui.py  sealed_envelope.py
agent_ui_adapter/transport/: __init__.py  backpressure.py  heartbeat.py  resumption.py  sse.py
agent_ui_adapter/wire/: __init__.py  ag_ui_events.py  agent_protocol.py  domain_events.py  export_openapi.py
code_reviewer/: __init__.py
code_reviewer/frontend/: __init__.py  __main__.py  runner.py  tools.py
components/: __init__.py  evaluator.py  router.py  routing_config.py  schemas.py  sprint_schemas.py
docs/: AGENTS_MD_BEST_PRACTICES_RESEARCH.md  AGENTS_MD_RECOMMENDATIONS.md  AGENTS_MD_REVIEW.md  DEVELOPER_GUIDE.md  DEV_WORKSPACE_RESTART_GUIDE.md  E2E_CODE_REVIEW.md  FOUR_LAYER_ARCHITECTURE.md  FRONTEND_VALIDATION.md  LAYER1_IDENTITY_ANALYSIS.md  PHASE1_CODE_REVIEW.json  PHASE1_CODE_REVIEW.md  PHASE2_CODE_REVIEW.json  PHASE2_CODE_REVIEW.md  PHASE3_CODE_REVIEW.json  PHASE3_CODE_REVIEW.md  PHASE4_CODE_REVIEW.md  PLAYWRIGHT_TESTING_ARCHITECTURE.md  PYRAMID_ANALYSIS.md  SPRINT_PHASE4_PLAN.md  STYLE_GUIDE_FRONTEND.md  STYLE_GUIDE_LAYERING.md  STYLE_GUIDE_PATTERNS.md  TDD_AGENTS_MD_REVIEW.md  TRUST_FRAMEWORK_ARCHITECTURE.md  USER_MANUAL.md  ampsessionhandoff.md
docs/Architectures/: AGENT_UI_ADAPTER_ADAPTERS_DEEP_DIVE.md  AGENT_UI_ADAPTER_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  FRONTEND_PORT_DEVIATIONS_V3.md  (+3 more)
explainability_app/: __init__.py  __main__.py  dev_seed.py  server.py
frontend/: .gitignore  drizzle-kit-types.ts  drizzle.config.ts  middleware.test.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend-explainability/: .gitignore  package.json  vitest.config.ts
infra/: RUNBOOK.md
meta/: __init__.py  analysis.py  code_reviewer.py  drift.py  fallback_prototype.py  feasibility.py  judge.py  judge_prompt.j2  optimizer.py  run_eval.py
middleware/: __init__.py  __main__.py  composition.py  server.py
orchestration/: __init__.py  react_loop.py  state.py
prompts/: input_guardrail.j2  output_guardrail.j2  routing_policy.j2  system_prompt.j2
research/: pyramid_react_system_prompt.md  scqa_reframing_agent_prompt.md  tdd_agentic_systems_prompt.md
scripts/: record_code_reviewer_fixture.py  regenerate_wire_artifacts.sh
services/: __init__.py  authorization_service.py  base_config.py  eval_capture.py  explainability_service.py  guardrails.py  llm_config.py  long_term_memory.py  observability.py  prompt_service.py  trace_service.py
tests/: conftest.py
trust/: __init__.py  cloud_identity.py  enums.py  exceptions.py  models.py  protocols.py  review_schema.py  signature.py
utils/: code_analysis.py
(+421 files in other folders)
